Updated GUI with comments, setCellEditor() revamp, and formatted strings where needed instead of concatenated strings.